--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.4",
     "notyf": "^3.10.0",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
@@ -56,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-csv": "^1.1.3"
   }
 }
