--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "loadsh": "^0.0.4",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.3.5"
   }
 }
