--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec ts-node server.ts"
@@ -10,6 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=16.14.0"
+  },
   "devDependencies": {
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
@@ -23,7 +26,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
-    "loadsh": "^0.0.4",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.5"
   }
