--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -15,7 +15,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
     "@types/cors": "^2.8.13",
