--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js",
+    "start": "node build/server.js",
     "dev": "nodemon --exec ts-node server.ts",
     "build": "tsc"
   },
