--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build/server.js",
     "dev": "nodemon --exec ts-node server.ts",
+    "prebuild": "npm install",
     "build": "tsc"
   },
   "keywords": [],
